프론트 / 어드민 폴더 통합

--- a/case/index.html
+++ b/case/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -38,27 +38,6 @@
 			<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
 		</header>
 		<!-- //헤더영역 -->
-
-		<style type="text/css">
-			.tabListBox {
-				position: absolute;
-				top: 27px;
-				right: 0;
-				width: 150px;
-				height: 62px;
-				border: 1px solid blue;
-				background: #fff;
-				overflow: hidden;
-			}
-
-			.tabListBox li {}
-
-			.tabListBox li a {
-				display: block;
-				font-size: 14px;
-				color: #333;
-			}
-		</style>
 
 		<section id="container">
 			<div class="inner">
