--- a/common/header.html
+++ b/common/header.html
@@ -32,34 +32,11 @@
 </head>
 
 <body>
-	<div class="flexWrap">
-		<div class="flexLayer">
-			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
-			<div class="flexContent">
-				<div class="inner">
-					<h2 class="tit" id="i00007_subscriptionSubmittedLb">Your Subscription Submitted</h2>
-					<div class="inpInner">
-						<p class="nTxt" id="i00007_dontWorryLb">
-							You have now successfully submit your subscription of <br />
-							OPUS Logistics Service.<br />
-							We will send a Email to instruct the service in few days.
-							Please, follow the instruction in the Email.
-						</p>
-							<ul class="list1">
-								<li><a href="#" id="i00007_goToHome">Go to OPUS Logistics Homepage</a></li>
-								<li><a href="#" id="i00007_goToTraning">Go to OPUS Logistics Traning Materials</a></li>
-								<li><a href="#" id="i00007_goToSupport">Go to OPUS Logistics Support</a></li>
-							</ul>
-					</div>
-				</div>
-			</div>
-			<div class="link">
-				<a href="#" id="i10007-helpLb">Help</a>
-				<a href="#" id="i10007-privacyLb">Privacy</a>
-				<a href="#" id="i10007-termsLb">Terms</a>
-			</div>
-		</div>
-	</div>
-</body>
 
-</html>
+
+	<header id="headerWrap">
+		<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
+	</header>
+
+
+</body>
