--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -72,7 +72,7 @@
 
 <body>
     <section class="wrap">
-        <h1>OPUS - 사용자</h1>
+        <h1>OPUS - 관리자</h1>
         <div class="text_box">
             <p>* 문서타입 : HTML5 / CSS3</p>
             <!-- <p>* pc : 1280 ~ ? </p>
@@ -173,82 +173,67 @@
                         <th>로그인</th>
                         <td>Sign In</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10001.html">login/cup10001.html</a></td>
-                        <td class="red">
-							2019-01-29 수정
-						</td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
                     </tr>
 					<tr>
                         <td>Password</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10002.html">login/cup10002.html</a></td>
-                        <td>
-							제공된 썸네일 기본 이미지가 없어서 임의로 적용해 놓음 추후 변경 예정 <br />
-							<span class="red">2019-01-29 수정</span>
-						</td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
                     </tr>
 					<tr>
                         <td>신규가입</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10003.html">login/cup10003.html</a></td>
-                        <td class="red">
-							2019-01-29 수정
-						</td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
                     </tr>
 					<tr>
                         <td>잊은암호 변경요청</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10004.html">login/cup10004.html</a></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>잊은암호 변경</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10005.html">login/cup10005.html</a></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>신규가입 확인(메일)</td>
+                        <td>계정 요청</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10010.html">login/cup10010.html</a></td>
-                        <td class="red">
-							2019-01-29 수정
-						</td>
-                    </tr>
-					<tr>
-                        <td>신규가입 확인</td>
-                        <td></td>
-                        <td><a target="_blank" href="login/cup10006.html">login/cup10006.html</a></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>신규가입 요청 확인</td>
+                        <td>계정 요청 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10007.html">login/cup10007.html</a></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>잊은암호변경 확인(메일)</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10008.html">login/cup10008.html</a></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>잊은암호변경 확인</td>
                         <td></td>
-                        <td><a target="_blank" href="login/cup10009.html">login/cup10009.html</a></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>계정 요청 확인(메일)</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>Home</td>
                         <td></td>
-                        <td><a target="_blank" href="login/"></a></td>
-                        <td class="red"></td>
-                    </tr>
-					<tr>
-                        <td>Home-게시물</td>
-                        <td></td>
-                        <td><a target="_blank" href="login/"></a></td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 
@@ -265,16 +250,8 @@
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
-
-					<tr class="line">
-                        <th>조직</th>
-                        <td>Organization 목록</td>
-                        <td></td>
-                        <td><a target="_blank" href="#"></a></td>
-                        <td class="red"></td>
-                    </tr>
 					<tr>
-                        <td>Organization 수정</td>
+                        <td>Sign In</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
@@ -285,10 +262,72 @@
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
+					<tr>
+                        <td>해지 요청(메일)</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>해지 요청 확인</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>사용자초청(메일)</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+
+					<tr class="line">
+                        <th>조직</th>
+                        <td>Organization 목록</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>Organization 관리</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>사용자초청(팝업)</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>사용자초청(메일)</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
 
 					<tr class="line">
                         <th>계약정보</th>
                         <td>가입고객목록</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>신규고객</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>유료고객</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>탈퇴고객</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
@@ -305,10 +344,34 @@
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
+					<tr>
+                        <td>과금정책선택(팝업)</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
 
 					<tr class="line">
                         <th>빌링</th>
+                        <td>과금정책목록</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>신규과금정책</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
                         <td>정기과금목록</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>미승인과금</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
@@ -327,6 +390,30 @@
                     </tr>
 					<tr>
                         <td>취소과금</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>Invoice</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>과금정보관리</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>인쇄미리보기</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>스케줄러</td>
                         <td></td>
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
@@ -355,50 +442,102 @@
                         <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
+					<tr>
+                        <td>전송</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>스케줄러(NO UI)</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
 
 					<tr class="line">
-                        <th>홈페이지</th>
-                        <td>상품선택</td>
+                        <th>서비스</th>
+                        <td>서비스목록</td>
                         <td></td>
-                        <td></td>
+                        <td><a target="_blank" href="service_a/cup10701.html">cup10701.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>부가서비스선택</td>
+                        <td>서비스관리</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00002.html">homepage/cup00002.html</a></td>
-                        <td class="red"></td>
-                    </tr>
-					<tr>
-                        <td>플랫폼선택</td>
-                        <td></td>
-                        <td><a target="_blank" href="homepage/cup00003.html">homepage/cup00003.html</a></td>
-                        <td class="red"></td>
-                    </tr>
-					<tr>
-                        <td>계약정보입력</td>
-                        <td></td>
-                        <td><a target="_blank" href="homepage/cup00005.html">homepage/cup00005.html</a></td>
+                        <td><a target="_blank" href="service_a/cup10702.html">cup10702.html</a></td>
                         <td class="red">
-							2019-01-29 수정
+							2019-01-29 수정 <br />
+							2019-01-30 수정
 						</td>
                     </tr>
 					<tr>
-                        <td>계약서확인</td>
+                        <td>가격목록</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00006.html">homepage/cup00006.html</a></td>
+                        <td><a target="_blank" href="service_a/cup10703.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>계약정보확인</td>
+                        <td>가격관리</td>
                         <td></td>
-                        <td><a target="_blank" href="homepage/cup00007.html">homepage/cup00007.html</a></td>
+                        <td><a target="_blank" href="service_a/cup10704.html"></a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
-                        <td>홈페이지/교육동영상 링크</td>
+                        <td>서비스가격(팝업)</td>
                         <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>서비스그룹</td>
                         <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+
+					<tr class="line">
+                        <th>사이트</th>
+                        <td>Notice목록</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>Notice관리</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>파일선택</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+
+					<tr class="line">
+                        <th>관리자</th>
+                        <td>시스템코드목록</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>시스템코드관리</td>
+                        <td></td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td rowspan="2">권한</td>
+                        <td>Roles</td>
+                        <td><a target="_blank" href="#"></a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>Groups</td>
+                        <td><a target="_blank" href="#"></a></td>
                         <td class="red"></td>
                     </tr>
 
