--- a/login/cup10001.html
+++ b/login/cup10001.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -37,33 +37,33 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i10001-signInLb">Sign In</h2>
+					<h2 class="tit" id="i10001_signInLb">Sign In</h2>
 					<div class="inpInner">
 						<div class="idArea">
 							<div class="inputBox full">
 								<!-- 2019-01-29 클래스 추가 -->
-								<input type="text" name="i10001-userId" class="inp Mandate" id="i10001-userId" maxlength="50" placeholder="Email or User ID" />
+								<input type="text" name="i10001_userId" class="inp Mandate" id="i10001_userId" maxlength="50" placeholder="Email or User ID" />
 								<button class="inpReset"></button>
 							</div>
 						</div>
 						<div class="loginCheck">
 							<div class="checkbox">
-								<input type="checkbox" name="i10001-rememberMe" id="i10001-rememberMe"><label for="i10001-rememberMe" id="i10001-rememberMeLb">Remember Me</label>
+								<input type="checkbox" name="i10001_rememberMe" id="i10001_rememberMe"><label for="i10001_rememberMe" id="i10001_rememberMeLb">Remember Me</label>
 							</div>
 						</div>
 						<div class="joinBtn">
-							<a href="#" id="i10001-newAccountLb">New Account</a>
+							<a href="#" id="i10001_newAccountLb">New Account</a>
 							<div class="btns">
-								<button class="btn" id="i10001-next">Next</button>
+								<button class="btn" id="i10001_next">Next</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10001-helpLb">Help</a>
-				<a href="#" id="i10001-privacyLb">Privacy</a>
-				<a href="#" id="i10001-termsLb">Terms</a>
+				<a href="#" id="i10001_helpLb">Help</a>
+				<a href="#" id="i10001_privacyLb">Privacy</a>
+				<a href="#" id="i10001_termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
