--- a/login/cup10004.html
+++ b/login/cup10004.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -37,26 +37,26 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i10004-fogotPasswordLb">Forgot Password?</h2>
+					<h2 class="tit" id="i10004_fogotPasswordLb">Forgot Password?</h2>
 					<div class="inpInner">
-						<p class="nTxt" id="i10004-dontWorryLb">
+						<p class="nTxt" id="i10004_dontWorryLb">
 							Don't worry. Resetting your password is easy. <br />
 							We will send a Email to reset your password. <br />
 							Please, follow the instruction in the Email.
 						</p>
 							<div class="joinBtn">
-								<a href="#" id="i10004-newAccountLb">New Account</a>
+								<a href="#" id="i10004_newAccountLb">New Account</a>
 								<div class="btns">
-									<button class="btn" id="i10004-sendEmail">Send Email</button>
+									<button class="btn" id="i10004_sendEmail">Send Email</button>
 								</div>
 							</div>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10004-helpLb">Help</a>
-				<a href="#" id="i10004-privacyLb">Privacy</a>
-				<a href="#" id="i10004-termsLb">Terms</a>
+				<a href="#" id="i10004_helpLb">Help</a>
+				<a href="#" id="i10004_privacyLb">Privacy</a>
+				<a href="#" id="i10004_termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
