--- a/login/cup10009.html
+++ b/login/cup10009.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -37,24 +37,24 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i10009-passwordResetLb">Password Reset</h2>
+					<h2 class="tit" id="i10009_passwordResetLb">Password Reset</h2>
 					<div class="inpInner">
-						<p class="nTxt" id="i10009-confirmPassword">
+						<p class="nTxt" id="i10009_confirmPassword">
 							Your password has been reset. <br />
 							Please, Sign In.
 						</p>
 							<div class="joinBtn">
 								<div class="btns">
-									<button class="btn" id="i10009-next">Sign In</button>
+									<button class="btn" id="i10009_next">Sign In</button>
 								</div>
 							</div>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10009-helpLb">Help</a>
-				<a href="#" id="i10009-privacyLb">Privacy</a>
-				<a href="#" id="i10009-termsLb">Terms</a>
+				<a href="#" id="i10009_helpLb">Help</a>
+				<a href="#" id="i10009_privacyLb">Privacy</a>
+				<a href="#" id="i10009_termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
