--- a/homepage/cup00003.html
+++ b/homepage/cup00003.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -37,23 +37,23 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i00003-selectPlatformTypeLb">Select Platform Type</h2>
+					<h2 class="tit" id="i00003_selectPlatformTypeLb">Select Platform Type</h2>
 					<dl class="inpItem">
-						<dt id="i00003-platformTypeLb">Platform Type</dt>
+						<dt id="i00003_platformTypeLb">Platform Type</dt>
 						<dd class="tr">
 							<div class="comboBox">
-								<select class="comboSelect" id="i00003-platformType" placeholder="Select a Type">
+								<select class="comboSelect" id="i00003_platformType" placeholder="Select a Type">
 									<option value="">Select a Type</option>
 									<option value="Share">Share</option>
 								</select>
 							</div>
 							<div class="inputBox readonly amount">
 								<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
-								<input type="text" name="i00003-platformPrice" class="inp Readonly" id="i00003-platformPrice" readonly="readonly" value="100.00">
+								<input type="text" name="i00003_platformPrice" class="inp Readonly" id="i00003_platformPrice" readonly="readonly" value="100.00">
 							</div>
 						</dd>
 					</dl>
-					<div class="txtBox" id="i00003-platformDescription">
+					<div class="txtBox" id="i00003_platformDescription">
 						Share System <br />
 						Operation and Backup Service <br />
 						24hour On-line helpdesk Support <br />
@@ -61,17 +61,17 @@
 					</div>
 						<div class="lineBasic"></div>
 						<dl class="inpItem fin">
-							<dt id="i00003-monthlyTotalLb"><span class="bold">Monthly Total</span></dt>
+							<dt id="i00003_monthlyTotalLb"><span class="bold">Monthly Total</span></dt>
 							<dd class="tr">
 								<div class="inputBox readonly amount">
 									<input type="text" name="" class="inp Readonly" id="" readonly="readonly" value="USD">
-									<input type="text" name="i00003-totalPrice" class="inp Readonly" id="i00003-totalPrice" readonly="readonly" value="1,500.00">
+									<input type="text" name="i00003_totalPrice" class="inp Readonly" id="i00003_totalPrice" readonly="readonly" value="1,500.00">
 								</div>
 							</dd>
 						</dl>
 
-						<h3 class="tit" id="i00003-termsOfUseLb">Terms of Use</h3>
-						<div class="txtBox" id="i00003-termsOfUse">
+						<h3 class="tit" id="i00003_termsOfUseLb">Terms of Use</h3>
+						<div class="txtBox" id="i00003_termsOfUse">
 							Service Agreement <br />
 						{Content of OPUS Logistics Service Agreement} <br />
 						{Content of OPUS Logistics Service Agreement} <br />
@@ -79,22 +79,22 @@
 					</div>
 							<div class="lineBasic"></div>
 							<div class="agreeChk">
-								<p class="txt" id="i00003-agreeTermsLb">I am sure to read and to agree the terms</p>
+								<p class="txt" id="i00003_agreeTermsLb">I am sure to read and to agree the terms</p>
 								<div class="checkbox">
-									<input type="checkbox" name="i00003-agreeTermsChk" id="i00003-agreeTermsChk"><label for="i00003-agreeTermsChk" id="i00003-agreeTerms">Agree</label>
+									<input type="checkbox" name="i00003_agreeTermsChk" id="i00003_agreeTermsChk"><label for="i00003_agreeTermsChk" id="i00003_agreeTerms">Agree</label>
 								</div>
 							</div>
 							<div class="joinBtn">
 								<div class="btns">
-									<button class="btn" id="i00003-next">Next</button>
+									<button class="btn" id="i00003_next">Next</button>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="link">
-						<a href="#" id="i00003-helpLb">Help</a>
-						<a href="#" id="i00003-privacyLb">Privacy</a>
-						<a href="#" id="i00003-termsLb">Terms</a>
+						<a href="#" id="i00003_helpLb">Help</a>
+						<a href="#" id="i00003_privacyLb">Privacy</a>
+						<a href="#" id="i00003_termsLb">Terms</a>
 					</div>
 				</div>
 			</div>
