--- a/login/cup10002.html
+++ b/login/cup10002.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -37,8 +37,8 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit thumb" id="i10002-hiUserName">
-						<img src="../static/images/common/icon/icon_person.png" alt="" id="i10002-userAvatar" />
+					<h2 class="tit thumb" id="i10002_hiUserName">
+						<img src="../static/images/common/icon/icon_person.png" alt="" id="i10002_userAvatar" />
 						<!-- 반영되었을 경우 예시
 						<img src="../static/images/sample/person.jpg" alt="" />
 						 -->
@@ -50,23 +50,23 @@
 						<div class="idArea">
 							<div class="inputBox full">
 								<!-- 2019-01-29 클래스 추가 -->
-								<input type="password" name="i10002-password" class="inp Mandate pwinp" id="i10002-password" maxlength="50" placeholder="Password" />
+								<input type="password" name="i10002_password" class="inp Mandate pwinp" id="i10002_password" maxlength="50" placeholder="Password" />
 								<button class="inpReset"></button>
 							</div>
 						</div>
 						<div class="joinBtn">
-							<a href="#" id="i10002-forgotPasswordLb">Forgot password?</a>
+							<a href="#" id="i10002_forgotPasswordLb">Forgot password?</a>
 							<div class="btns">
-								<button class="btn" id="i10002-next">Next</button>
+								<button class="btn" id="i10002_next">Next</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10002-helpLb">Help</a>
-				<a href="#" id="i10002-privacyLb">Privacy</a>
-				<a href="#" id="i10002-termsLb">Terms</a>
+				<a href="#" id="i10002_helpLb">Help</a>
+				<a href="#" id="i10002_privacyLb">Privacy</a>
+				<a href="#" id="i10002_termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
