--- a/login/cup10005.html
+++ b/login/cup10005.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -37,9 +37,9 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i10005-resetPasswordLb">Reset Password</h2>
+					<h2 class="tit" id="i10005_resetPasswordLb">Reset Password</h2>
 					<div class="inpInner">
-						<p class="nTxt" id="i10005-requestedResetLb">
+						<p class="nTxt" id="i10005_requestedResetLb">
 							You have requested to reset the password for: <br />
 							{User Name}
 						</p>
@@ -47,34 +47,34 @@
 								<dd>
 									<div class="inputBox full">
 										<!-- 2019-01-29 클래스 수정 -->
-										<input type="password" name="i10005-password" class="inp Mandate pwinp" id="i10005-password" placeholder="Type Password" maxlength="50">
+										<input type="password" name="i10005_password" class="inp Mandate pwinp" id="i10005_password" placeholder="Type Password" maxlength="50">
 										<button class="inpReset"></button>
 									</div>
-									<p class="alertMessage" id="i10005-shortPasswordLb">Password must contain at least 8 characters. At least one alphabet and one number should be included.</p>
+									<p class="alertMessage" id="i10005_shortPasswordLb">Password must contain at least 8 characters. At least one alphabet and one number should be included.</p>
 								</dd>
 							</dl>
 							<dl class="inpItem">
 								<dd>
 									<div class="inputBox full">
 										<!-- 2019-01-29 클래스 수정 -->
-										<input type="password" name="i10005-confirmPassword" class="inp Mandate pwinp" id="i10005-confirmPassword" placeholder="Re-Type Password" maxlength="50">
+										<input type="password" name="i10005_confirmPassword" class="inp Mandate pwinp" id="i10005_confirmPassword" placeholder="Re-Type Password" maxlength="50">
 										<button class="inpReset"></button>
 									</div>
-									<p class="alertMessage" id="i10005-misconfirmPasswordLb">The passwords you entered don't match.</p>
+									<p class="alertMessage" id="i10005_misconfirmPasswordLb">The passwords you entered don't match.</p>
 								</dd>
 							</dl>
 							<div class="joinBtn">
 								<div class="btns">
-									<button class="btn" id="i10005-next">Reset Password</button>
+									<button class="btn" id="i10005_next">Reset Password</button>
 								</div>
 							</div>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10005-helpLb">Help</a>
-				<a href="#" id="i10005-privacyLb">Privacy</a>
-				<a href="#" id="i10005-termsLb">Terms</a>
+				<a href="#" id="i10005_helpLb">Help</a>
+				<a href="#" id="i10005_privacyLb">Privacy</a>
+				<a href="#" id="i10005_termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
