--- a/login/cup10006.html
+++ b/login/cup10006.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta name="x-apple-disable-message-reformatting" />
-	<title>OPUS</title>
+	<title>Customer Portal</title>
 	<link rel="shortcut icon" href="../static/images/common/favicon.ico">
 	<link href="../static/css/lib/swiper.css" rel="stylesheet">
 	<link href="../static/css/reset.css" rel="stylesheet" />
@@ -37,23 +37,23 @@
 			<h1><img src="../static/images/common/logo.png" alt="OPUS LOGISTICS" /></h1>
 			<div class="flexContent">
 				<div class="inner">
-					<h2 class="tit" id="i10006-validateAccountLb">Validate Account</h2>
+					<h2 class="tit" id="i10006_validateAccountLb">Validate Account</h2>
 					<div class="inpInner">
-						<p class="nTxt" id="i10006-clickVerifyLb">
+						<p class="nTxt" id="i10006_clickVerifyLb">
 							Please, click the button to validate your account.
 						</p>
 						<div class="joinBtn">
 							<div class="btns">
-								<button class="btn" id="i10006-validate">Validate Account</button>
+								<button class="btn" id="i10006_validate">Validate Account</button>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="link">
-				<a href="#" id="i10006-helpLb">Help</a>
-				<a href="#" id="i10006-privacyLb">Privacy</a>
-				<a href="#" id="i10006-termsLb">Terms</a>
+				<a href="#" id="i10006_helpLb">Help</a>
+				<a href="#" id="i10006_privacyLb">Privacy</a>
+				<a href="#" id="i10006_termsLb">Terms</a>
 			</div>
 		</div>
 	</div>
